# SARS-CoV-2-Challenge

./: .gitignore  INFORME.md  LecturaCSV.py  LecturaCSVEqualCountry.py  LecturaCSVdefinitive.py  README.md  README_AliSeq.md  README_Preprocessament.md  SequenceAlinement.py  geoLocations.csv  requirements.txt
NeedlemanWunsch_Rust/src/: main.rs
Processament/: LecturaCSV.py
SERGIO/: LecturaCSV.py  Main.py  NeedlemanWunsch.py  UrlSequence.py  geoLocations.csv  sequencesFASTA.fasta
SERGIO/NeedlemanWunsch/: Cargo.toml
SERGIO/NeedlemanWunsch/src/: main.rs
python/: Clustering.py  KMedoids.py  LecturaCSV.py  NeedlemanWunsch.py  NeedlemanWunschRust.py  UrlSequence.py  __init__.py
python/data/: geoLocations.csv
python/lib/: needleman_wunsch_rust.d  needleman_wunsch_rust.dll.exp  needleman_wunsch_rust.dll.lib  needleman_wunsch_rust.pyd
rust/src/: lib.rs
src/: Main.py  NeedlemanWunsch.py  UrlSequence.py  sequences.csv
src/python/: ChoroplethMap.py  Clustering.py  Graph.py  LecturaCSV.py  NeedlemanWunsch.py  NeedlemanWunschRust.py  Resultado  UrlSequence.py  __init__.py  sarscovhierarchy.py  test.py
src/python/data/: sequences.csv  sequencesFASTA.fasta
src/rust/: Cargo.toml
src/rust/src/: lib.rs
