[package]
name = "NeedlemanWunsch_rust"
version = "0.1.0"
authors = ["Sergio Beltrán Guerrero <sergiobeltranguerrero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-matrix = "0.1.2"

[lib]
name = "needleman_wunsch_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]